@@ -1,3 +1,10 @@
+Thu Mar  8 22:41:34 UTC 2012  Adam Mitz  <mitza@ociweb.com>
+
+        * modules/Depgen/Preprocessor.pm:
+
+          Cached results of full path to #included files need to be
+          kept separately for each directory of input files.
+
 Thu Mar  8 06:50:28 UTC 2011  Martin Corino  <mcorino@remedy.nl>
 
         * modules/TemplateParser.pm:
